--- a/mirah-dsl-core/pom.xml
+++ b/mirah-dsl-core/pom.xml
@@ -31,7 +31,11 @@
     <plugins>
       <plugin>
         <groupId>org.mirah.maven</groupId>
-        <artifactId>maven-mirah-plugin</artifactId>	    
+        <artifactId>maven-mirah-plugin</artifactId>
+	     <configuration>
+		     <verbose>false</verbose>
+		     <newClosures>true</newClosures>
+	     </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
